--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit tests / coverage reports
 htmlcov/
 .tox/
 .nox/
@@ -218,7 +218,7 @@ modules.xml
 
 # Installer logs
 
-# Unit test / coverage reports
+# Unit tests / coverage reports
 
 # Translations
 
